#14 fix - test코드 에러 해결 / 쓸모없는부분 삭제

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,8 +3,16 @@ plugins {
     id 'org.springframework.boot' version '3.4.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.jetbrains.kotlin.jvm' version '2.1.10'
-}
+    id "org.jetbrains.kotlin.plugin.spring" version '2.1.10'
+    id 'org.jetbrains.kotlin.plugin.allopen' version '2.1.10'
 
+}
+allOpen {
+    annotation("org.springframework.stereotype.Component")
+    annotation("org.springframework.transaction.annotation.Transactional")
+    annotation("org.springframework.web.bind.annotation.RestController")
+    annotation("org.springframework.web.bind.annotation.Controller")
+}
 group = 'com.programmers'
 version = '0.0.1-SNAPSHOT'
 
@@ -39,10 +47,15 @@ dependencies {
     implementation 'org.json:json:20231013'
 
     // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
+
+    //코틀린 관련
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
+
 
 }
 
