--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.jetbrains.kotlin.jvm' version '2.1.10'
     id "org.jetbrains.kotlin.plugin.spring" version '2.1.10'
+    id "org.jetbrains.kotlin.plugin.jpa" version '2.1.10'
     id 'org.jetbrains.kotlin.plugin.allopen' version '2.1.10'
 
 }
