#14 refactor - 괄호 제거

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     implementation 'org.json:json:20231013'
 
     // JWT
-    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
-    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
-    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
+    implementation "io.jsonwebtoken:jjwt-api:0.12.6"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"
 
     //코틀린 관련
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
