--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.1.10'
     id "org.jetbrains.kotlin.plugin.spring" version '2.1.10'
     id "org.jetbrains.kotlin.plugin.jpa" version '2.1.10'
+    id 'org.jetbrains.kotlin.plugin.lombok' version '2.1.10'
+    id 'io.freefair.lombok' version '8.10'
 
 }
 
