--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,8 +3,10 @@ plugins {
     id 'org.springframework.boot' version '3.4.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.jetbrains.kotlin.jvm' version '2.1.10'
+
     id "org.jetbrains.kotlin.plugin.spring" version '2.1.10'
     id "org.jetbrains.kotlin.plugin.jpa" version '2.1.10'
+
     id 'org.jetbrains.kotlin.plugin.lombok' version '2.1.10'
     id 'io.freefair.lombok' version '8.10'
 
@@ -44,6 +46,7 @@ dependencies {
     implementation 'org.json:json:20231013'
 
     // JWT
+
     implementation "io.jsonwebtoken:jjwt-api:0.12.6"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"
@@ -55,6 +58,12 @@ dependencies {
 
     //소셜로그인 관련
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // WebSocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+
 
 
 }
