--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -22,6 +22,35 @@ spring:
   sql:
     init:
       mode: always
+  security:
+    oauth2:
+      client:
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: id
+        registration:
+          kakao:
+            client-id: f311ce92cfbf303c4ccb598b0a6b00f3
+            client-secret: KXcrkXhAmpfVyfvr4EqTvI8x9joawP5w
+            redirect-uri: http://localhost:8080/api/auth/login/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: kakao
+          naver:
+            client-id: W24EHHYPn9UqfoE3u020
+            client-secret: HSULpZx6LO
+            redirect-uri: http://localhost:8080/api/auth/login/naver
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+            client-name: naver
 
 openapi:
   url: http://api.odcloud.kr/api/nts-businessman/v1/status?serviceKey=
