--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.json:json:20231013'
+    
+    // H2 데이터베이스 (테스트용)
+    testRuntimeOnly 'com.h2database:h2'
 
     // JWT
 
