--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.json:json:20231013'
 
